# sz-orm

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  audit.toml  crates.js  deny.toml  docker-compose.yml  help.html  index.html  settings.html  src-files.js
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.semgrep/: rust-security.yaml
bench-comparison/: BENCHMARK_REPORT.md  Cargo.toml  bench-real-db-results.txt  bench-results.txt
bench-comparison/benches/: orm_comparison.rs
bench-comparison/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: ADR与生产Bug定位规范.md  SZ-ORM 与主流 ORM 对比.md  Security.md  api-contracts.md  sea-orm迁移指南.md  sz-orm-engineering-practices.md  sz-ormAPI参考.md  sz-orm使用指南.md  sz-orm全面审查报告v1.md  sz-orm学习路线图.md  sz-orm性能基准.md  sz-orm技术实现深度评估.md  sz-orm改造实施文档.md  sz-orm架构设计.md  sz-orm生产就绪报告.md  sz-orm真实审查报告.md  sz-orm项目实施进度表.md  sz-orm项目成熟度评估报告.md  软件项目审计清单.md
examples/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pool_config.rs  query_builder.rs  value_escape.rs
grafana/: sz-orm-dashboard.json
hooks_soft_delete/: all.html  fn.main.html  index.html  struct.Product.html
migration/: all.html  fn.main.html  index.html
model_definition/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Article.html
multi_tenant/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Order.html
production_app/: all.html  fn.current_ts_millis.html  fn.current_ts_secs.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.Order.html  struct.Product.html  struct.User.html
production_dtx/: all.html  constant.XML_TEMPLATES.html  fn.main.html  fn.print_separator.html  index.html  sidebar-items.js  struct.CrossShardOrderService.html  struct.ExecutionLog.html
quick_start/: all.html  fn.main.html  index.html  sidebar-items.js  struct.User.html
scripts/: audit-api-changes.ps1  audit-api-changes.sh  check_published.py  gate.ps1  gate.sh  install-hooks.ps1  install-hooks.sh  publish-all.ps1  publish_all.py
search.index/: 0076a8c6e8.js  007e72b7fe.js  00a8bf35ee.js  00af8cc075.js  00b5c306ec.js  00e80b6b15.js  010229f95d.js  01131e8de4.js  0137df3524.js  015da554f3.js  017bf4dcfa.js  018481b503.js  018753d450.js  01a045f1d4.js  01cfb78e88.js  02a58dda4f.js  02c61ca75b.js  0313ffb07a.js  031d1deaf2.js  03541e809a.js  038c17d212.js  040e632b8d.js  04438be1da.js  04608ad2e9.js  047371c689.js  04b486f097.js  054458e87e.js  05803e5fb1.js  05d3bf0dcb.js  0684ba1b33.js  069beb35ff.js  06bccba3d5.js  06c1ef2336.js  06c2fd17c0.js  06fd1041e5.js  07182f8a61.js  071ecaa719.js  07b09292ae.js  0829b257ce.js  082c0cc893.js  (+479 more)
sz_orm/: all.html  constant.HELP.html  constant.VERSION.html  enum.DbKind.html  fn.cmd_dialect.html  fn.cmd_generate.html  fn.cmd_generate_entity.html  fn.cmd_generate_schema.html  fn.cmd_info.html  fn.cmd_make_migration.html  fn.cmd_make_model.html  fn.cmd_migrate.html  fn.cmd_migrate_status.html  fn.cmd_sql_validate.html  fn.detect_db_kind.html  fn.extract_schema_from_dsn.html  fn.fetch_all_tables.html  fn.fetch_columns.html  fn.main.html  fn.map_db_type_to_rust.html  fn.map_db_type_to_value_variant.html  fn.parse_option.html  fn.pluralize.html  fn.render_model_code.html  fn.to_pascal_case.html  fn.to_snake_case.html  fn.yes_no.html  index.html  sidebar-items.js  struct.ColumnInfo.html  struct.TableInfo.html
sz_orm_ai/: all.html  index.html  sidebar-items.js
sz_orm_audit/: all.html  fn.query_logs.html  index.html  sidebar-items.js  struct.AsyncAuditWriter.html  struct.AuditQuery.html  struct.AuditRules.html  struct.RotatingAuditor.html  struct.RotationPolicy.html  struct.SqlAuditContext.html  struct.SqlAuditor.html
sz_orm_auth/: all.html  index.html  sidebar-items.js
sz_orm_back/: all.html  enum.DegradationAction.html  enum.DrillScenario.html  index.html  sidebar-items.js  struct.DegradationPolicy.html  struct.DisasterRecoveryDrill.html  struct.DrillReport.html  struct.HealthStatus.html
sz_orm_batch/: all.html  constant.DEFAULT_CHUNK_SIZE.html  enum.BatchStage.html  enum.ConflictTarget.html  enum.RollbackStrategy.html  enum.UpsertMode.html  index.html  sidebar-items.js  struct.BatchProgress.html  struct.BatchResult.html  struct.ChunkProcessResult.html  struct.DefaultBatchOps.html  struct.UpsertResult.html  trait.BatchOperations.html  type.ProgressCallback.html
sz_orm_config/: all.html  constant.ENCRYPTED_PREFIX.html  constant.ENCRYPTED_SUFFIX.html  enum.ConfigFieldType.html  enum.ConfigSourcePriority.html  enum.ValidationError.html  index.html  sidebar-items.js  struct.ConfigChangeEvent.html  struct.ConfigEncryption.html  struct.ConfigFieldSchema.html  struct.ConfigWatcher.html  struct.ConsulConfigCenter.html  struct.MultiSourceConfig.html  struct.NacosConfigCenter.html  struct.SchemaValidator.html  trait.ConfigCenter.html  type.ConfigChangeCallback.html
sz_orm_core/: all.html  attr.async_trait.html  constant.DEFAULT_ACQUIRE_TIMEOUT.html  constant.DEFAULT_BATCH_SIZE.html  constant.DEFAULT_IDLE_TIMEOUT.html  constant.DEFAULT_MAX_LIFETIME.html  constant.DEFAULT_MAX_NESTING_DEPTH.html  constant.DEFAULT_MAX_SIZE.html  constant.DEFAULT_MIN_IDLE.html  derive.Deserialize.html  derive.Serialize.html  enum.AutoCommit.html  enum.CacheError.html  enum.DbError.html  enum.DbType.html  enum.IsolationLevel.html  enum.PoolError.html  enum.Relation.html  enum.RelationError.html  enum.TransactionState.html  enum.TxError.html  enum.Value.html  fn.is_deadlock_error.html  fn.retry_on_deadlock.html  fn.rows_to_values.html  fn.value_to_json.html  index.html  macro.define_columns!.html  macro.define_columns.html  macro.schema.html  macro.sql_string!.html  macro.sql_string.html  macro.typed_query!.html  macro.typed_query.html  sidebar-items.js  struct.BelongsTo.html  struct.BelongsToMany.html  struct.Bytes.html  struct.CacheStats.html  struct.DateTime.html  (+38 more)
sz_orm_crypto/: all.html  enum.CryptoError.html  fn.hmac_sha256.html  fn.hmac_sha256_hex.html  fn.sha256.html  fn.sha256_hex.html  index.html  sidebar-items.js  (+10 more)
(+1639 files in other folders)
