[workspace]
members = ["packages/sz-orm-core", "packages/sz-orm-ai", "packages/sz-orm-mig", "packages/sz-orm-back", "packages/sz-orm-websocket", "packages/sz-orm-mqtt", "packages/sz-orm-storage", "packages/sz-orm-queue", "packages/sz-orm-auth", "packages/sz-orm-scheduler", "packages/sz-orm-tracing", "packages/sz-orm-es", "packages/sz-orm-limit", "packages/sz-orm-crypto", "packages/sz-orm-grpc", "packages/sz-orm-graphql", "packages/sz-orm-dtx", "packages/sz-orm-rw", "packages/sz-orm-sharding", "packages/sz-orm-logger", "packages/sz-orm-swagger", "packages/sz-orm-masking", "packages/sz-orm-config", "packages/sz-orm-health", "packages/sz-orm-audit", "packages/sz-orm-batch", "packages/sz-orm-wasm", "packages/sz-orm-lc", "packages/sz-orm-sqlx", "packages/sz-orm-sql-validator", "packages/sz-orm-macros", "cli", "examples"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["SZ-ORM Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
sz-orm-core = { version = "0.2.0", path = "packages/sz-orm-core" }