[package]
name = "sz-orm-examples"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SZ-ORM 使用示例集"
publish = false

[dependencies]
sz-orm-core = { path = "../packages/sz-orm-core" }
sz-orm-crypto = { path = "../packages/sz-orm-crypto" }
sz-orm-auth = { path = "../packages/sz-orm-auth" }
sz-orm-limit = { path = "../packages/sz-orm-limit" }
sz-orm-scheduler = { path = "../packages/sz-orm-scheduler" }
sz-orm-audit = { path = "../packages/sz-orm-audit" }
sz-orm-dtx = { path = "../packages/sz-orm-dtx" }
sz-orm-sharding = { path = "../packages/sz-orm-sharding" }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }

[[bin]]
name = "quick_start"
path = "src/bin/quick_start.rs"

[[bin]]
name = "model_definition"
path = "src/bin/model_definition.rs"

[[bin]]
name = "transaction"
path = "src/bin/transaction.rs"

[[bin]]
name = "migration"
path = "src/bin/migration.rs"

[[bin]]
name = "hooks_soft_delete"
path = "src/bin/hooks_soft_delete.rs"

[[bin]]
name = "multi_tenant"
path = "src/bin/multi_tenant.rs"

[[bin]]
name = "production_app"
path = "src/bin/production_app.rs"

[[bin]]
name = "production_dtx"
path = "src/bin/production_dtx.rs"
